# chess_front

./: .env  .gitignore  ELECTRON_SETUP.md  README.md  SETUP.md  index.html  next.config.js  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.next/: trace
.next/server/: server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/vendor-chunks/: @swc.js  next.js
.next/static/chunks/: app-pages-internals.js  webpack.js
.next/static/webpack/: webpack.51194f580a3d702c.hot-update.js
.next/types/app/: layout.ts  page.ts
Chess Analysis Overlay UI/: README.md  index.html  package-lock.json  package.json
Chess Analysis Overlay UI/src/app/: App.tsx
Chess Analysis Overlay UI/src/styles/: theme.css
app/: globals.css  layout.tsx  page.tsx
components/ui/: liquid-glass.tsx
electron/: main.js  preload.js
scripts/: fen-api-server.mjs  recognize-fen.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/app/: App.tsx
src/app/components/: CalibrationFrame.tsx  ChessArrow.tsx  ChessBoardAnalysis.tsx  ChessMockBoard.tsx  EvaluationBar.tsx  LiquidGlass.tsx  MinimizedButton.tsx  ScoreBadge.tsx  SettingsControl.tsx  SidePanel.tsx  SquareHighlight.tsx  TopStatusBar.tsx  TransparentOverlay.tsx  WidgetSettings.tsx
src/components/ui/: auto-chess.tsx  board-select-overlay.tsx  chess-cheating.tsx  (+4 more)
src/styles/: index.css  theme.css
src/utils/: board-recognition.ts  boardDetection.ts  stockfish.ts
(+17 files in other folders)
