[package]
name = "yolo"
version = "0.1.0"
description = "A macOS desktop widget application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api"] }
tauri-plugin-shell = { version = "2.0", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
