[package]
name = "yolo"
version = "0.1.0"
description = "A macOS desktop widget application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api"] }
tauri-plugin-shell = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enigo = "0.2.1"
base64 = "0.22.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
